<resources>
    <string name="app_name">Swara</string>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="play_more_apps">https://play.google.com/store/apps/developer?id=nemosofts</string>
    <string name="privacy_policy_url">http://example.com</string>
    <string name="made_with_in_srilanka">Made With ❤ in Sri Lanka</string>
    <string name="app_developer_by_nemosofts">App developer By : Nemosofts</string>
    <string name="equalizer">Equalizer</string>
    <string name="menu_about">About Us</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="server_no_conn">Error, Server not connected</string>
    <string name="no_data_found">No Data Found</string>
    <string name="internet_not_conn">Internet not connected</string>
    <string name="artist">Artist</string>
    <string name="category">Category</string>
    <string name="developedby">Developed By</string>
    <string name="press_again_exit">Press again to exit</string>
    <string name="eq">Equalizer</string>
    <string name="song">Song</string>
    <string name="cannot_use_save">Cannot use save feature without requested permission</string>
    <string name="author">Author</string>
    <string name="desc">Description</string>
    <string name="privacy">Privacy Policy</string>
    <string name="rate_app">Rate App</string>
    <string name="share_app">Share App</string>
    <string name="more_app">More Apps</string>
    <string name="no_song_selected">No Song Selected</string>
    <string name="my_playlist">My Playlist</string>
    <string name="select_rating_msg">Please select rating</string>
    <string name="latest_artist">Latest Artist</string>
    <string name="about">About</string>
    <string name="custom_settings">CUSTOM SETTINGS</string>
    <string name="download_path">Download Path</string>
    <string name="action_share">Share</string>
    <string name="title_good_night">Good night, </string>
    <string name="title_good_evening">Good evening, </string>
    <string name="title_good_afternoon">Good afternoon, </string>
    <string name="title_good_morning">Good morning, </string>
    <string name="title_good_day">Good day, </string>
    <string name="cancel_timer">Cancel Timer</string>
    <string name="sure_cancel_timer">Are you sure you want to cancel timer?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cannot_use_save_permission">can not use recording features</string>
    <string name="hours">Hours</string>
    <string name="minute">Minute</string>
    <string name="hh">hh</string>
    <string name="mm">mm</string>
    <string name="dialogHading">Set Timer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="notification">Notify</string>
    <string name="likes">Favs</string>
    <string name="happy">Happy</string>
    <string name="room">Room</string>
    <string name="restaurant">Food</string>
    <string name="shop">Shop</string>
    <string name="photos">Pics</string>
    <string name="call">Call</string>
    <string name="file_name_device_info" translatable="false">deviceInf.txt</string>
    <string name="file_name_device_log" translatable="false">deviceLog.txt</string>
    <string name="feedback_mail_subject">Feedback of %1$s</string>
    <string name="Ok">OK</string>
    <string name="your_input">Write your feedback</string>
    <string name="send_feedback">Send</string>
    <string name="from" translatable="false">From:</string>
    <string name="please_write">Please write something.</string>
    <string name="send_feedback_two">Send Feedback</string>
    <string name="feedback">Feedback</string>
    <string name="click_again">Click again to change the image</string>
    <string name="select_picture_title">Select Picture</string>
    <string name="system_info">System Info</string>
    <string name="info_fedback_legal_start">"Your "</string>
    <string name="info_fedback_legal_system_info">"system info "</string>
    <string name="info_fedback_legal_and">"and "</string>
    <string name="info_fedback_legal_log_data">"log data "</string>
    <string name="info_fedback_legal_will_be_sent">will be sent to %s</string>
    <string name="html_link" translatable="false">&lt;a href=\'%1$s\'>%2$s&lt;/a></string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="tab_text_1">Songs</string>
    <string name="tab_text_2">Playlists</string>
    <string name="tab_text_3">Artist</string>
    <string name="tab_text_4">Albums</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_line">Play your favourite Songs</string>
    <string name="image_content">image</string>
    <string name="home">Home</string>
    <string name="albums">Albums</string>
    <string name="playlist">Playlist</string>
    <string name="myplaylist">My Playlist</string>
    <string name="favourite">Favourite</string>
    <string name="settings">Settings</string>
    <string name="err_no_artist_found">No Artist Found</string>
    <string name="err_internet_not_conn">Internet Not Connected</string>
    <string name="refresh">Refresh</string>
    <string name="see_all">See All</string>
    <string name="search">Search</string>
    <string name="err_server">Error connecting server</string>
    <string name="daftarlagu">Daftar Lagu</string>
    <string name="categories">Categories</string>
    <string name="latest">Latest</string>
    <string name="exit">Exit</string>
    <string name="sure_exit">Are you sure you want to exit?</string>
    <string name="cancel">Cancel</string>
    <string name="recently_played">Recently Played</string>
    <string name="err_no_songs_found">No Songs Found</string>
    <string name="err_no_data_found">No Data Found</string>
    <string name="err_no_cat_found">No Categories Found</string>
    <string name="dashboard">Dashboard</string>
    <string name="your_ad_consent">Your Ad Consent</string>
    <string name="show_personalized_ad">Show Personalized Ads</string>
    <string name="enable_push_noti">Enable Push Notification</string>
    <string name="moreapp">More Apps</string>
    <string name="privacypolicy">Privacy Policy</string>
    <string name="about_us">About Us</string>
    <string name="contact">Contact</string>
    <string name="website">Website</string>
    <string name="company">Company</string>
    <string name="version">Version</string>
    <string name="email">Email</string>
    <string name="err_no_songs_selected">No Songs Selected</string>
    <string name="close">Close</string>
    <string name="rating">Rating</string>
    <string name="share_song">Share Song</string>
    <string name="listening">I am listening</string>
    <string name="err_cannot_use_features">Cannot use some of the features without requested permission</string>
    <string name="rate_song">Thank you for rating</string>
    <string name="submit">Submit</string>
    <string name="maybe_later">Maybe Later</string>
    <string name="volume">Volume</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="err_no_playlist_found">No Playlist Found</string>
    <string name="downloading">Downloading</string>
    <string name="already_download">Already Downloaded</string>
    <string name="removed_fav">Removed from favourite</string>
    <string name="added_fav">Added to fav</string>
    <string name="retry">Retry</string>
    <string name="err_no_albums_found">No Albums Found</string>
    <string name="thanks_for_rating">Thanks for Rating</string>
    <string name="select_rating">Select Rating</string>
    <string name="loading">Loading..</string>
    <string name="delete">Delete</string>
    <string name="remove">Remove</string>
    <string name="file_deleted">File Deleted</string>
    <string name="sure_delete">Are you sure you want to delete this song?</string>
    <string name="sure_delete_playlist">Are you sure you want to delete this playlist?</string>
    <string name="remove_from_playlist">Removed from playlist</string>
    <string name="song_add_to_playlist">Song add to playlist -</string>
    <string name="add_playlist">Add Playlist</string>
    <string name="remove_playlist">Playlist removed</string>
    <string name="enter_playlist_name">Enter Playlist Name</string>
    <string name="add">ADD</string>
    <string name="playlist_added">Playlist Added</string>
    <string name="songs">Songs</string>
    <string name="title_activity_main2">MusicActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title">Title</string>
    <string name="music_library">Music Library</string>
    <string name="local_songs">Local Songs</string>
    <string name="add_songs">Add Songs</string>
    <string name="selected">Selected</string>
    <string name="select_song">Please select song</string>
    <string name="create_new_playlist">Create New Playlist</string>
    <string name="add_to_queue">Add to Queue</string>
    <string name="rateapp">Rate App</string>
    <string name="shareapp">Share App</string>
    <string name="trending_songs">Trending Songs</string>
    <string name="all_songs">All Songs</string>
    <string name="banner">Banner</string>
    <string name="downloads">Downloads</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="description">Description</string>
    <string name="setas">SetAs</string>
    <string name="set_as_ring">Set As Ringtone</string>
    <string name="set_ringnotification">Notification Ringtone</string>
    <string name="set_ringalarm">Alarm Ringtone</string>
    <string name="set_as_noti">Set As Notificaiton tone</string>
    <string name="set_as_alarm">Set As Alarm tone</string>
    <string name="alarm_set">Alarm Ringtone Set</string>
    <string name="noti_set">Notification tone set</string>
    <string name="ringtone_set">Ringtone Set</string>
    <string name="search_youtube">Search Youtube</string>
    <string name="off_add_qeue_alert">Current song list will be remove from the queue</string>
    <string name="no_songs_to_add_queue">No songs available to add to queue</string>
    <string name="queue_updated">Queue Updated</string>
    <string name="rate_song2">Rate this Song</string>
    <string name="err_playing_song">Error Playling Song</string>
    <string name="youtube_not_installed">Youtube app is not installed</string>
    <string name="downloaded">Downloaded</string>
    <string name="welcomeback">Welcome</string>
    <string name="signin_to_continue">Sign In to continue</string>
    <string name="remember_me">Remember Me</string>
    <string name="registering">Registering..</string>
    <string name="forgot_password_message">Enter your valid email address below and we will send you email with instructions on how to change your password</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="skip">Skip</string>
    <string name="forgot_pass">Forgot Your Password?</string>
    <string name="dnt_have_acc">Don\'t have an account?</string>
    <string name="signup">SignUp</string>
    <string name="email_empty">Email cannot be empty</string>
    <string name="profile">Profile</string>
    <string name="report_message">Enter your text here</string>
    <string name="suggest_song">Suggest Song</string>
    <string name="song_title">Song Title</string>
    <string name="select_image">Select Image</string>
    <string name="title_">Title:-</string>
    <string name="description_">Description</string>
    <string name="image_">Image:-</string>
    <string name="notifcation">Notifcation</string>
</resources>