<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_cat"
            android:icon="@drawable/ic_folder_white_24dp"
            android:title="@string/categories" />
        <item
            android:id="@+id/nav_dire"
            android:icon="@drawable/ic_artist_white_24dp"
            android:title="@string/artist" />
        <item
            android:id="@+id/nav_album"
            android:icon="@drawable/ic_album_white_24dp"
            android:title="@string/albums" />
        <item
            android:id="@+id/nav_my_pla"
            android:icon="@drawable/ic_playlist_add_white_24dp"
            android:title="@string/my_playlist" />

        <item
            android:id="@+id/nav_playlist"
            android:icon="@drawable/ic_playlist_play_white_24dp"
            android:title="@string/playlist" />

        <item
            android:id="@+id/nav_music_library"
            android:icon="@drawable/ic_library_music_white_24dp"
            android:title="@string/music_library"
            android:checkable="false"/>
        <item
            android:id="@+id/nav_downloads"
            android:icon="@drawable/ic_file_download"
            android:title="@string/downloads" />
        <item
            android:id="@+id/nav_favourite"
            android:icon="@drawable/ic_favorite_border_white2_24dp"
            android:title="@string/favourite" />

    </group>

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/profile" />


    <item
        android:id="@+id/nav_suggest"
        android:icon="@drawable/ic_file_music_white_24dp"
        android:title="@string/suggest_song" />

    <item
    android:id="@+id/nav_not"
    android:icon="@drawable/ic_notifications"
    android:title="@string/notifcation" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings_white_24dp"
        android:title="@string/settings" />

    <item
        android:id="@+id/nav_login"
        android:icon="@drawable/ic_login"
        android:title="@string/login" />
</menu>