<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/BackgroundColor"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_sugg"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/BackgroundColor"
        app:titleTextColor="?attr/BackgroundTint"
        app:title="@string/suggest_song"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/title_"
                    android:textColor="?attr/Titel_1"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_sugg_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_round_border"
                    android:backgroundTint="?Boder"
                    android:textColor="?Titel_1"
                    android:gravity="top"
                    android:hint="@string/song_title"
                    android:maxLines="1"
                    android:inputType="text"
                    android:padding="12dp"
                    android:textSize="14sp"
                    tools:ignore="Autofill" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/description_"
                    android:textColor="?attr/Titel_1"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_sugg_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="?Boder"
                    android:textColor="?Titel_1"
                    android:minLines="4"
                    android:maxLines="5"
                    android:gravity="top"
                    android:padding="12dp"
                    android:hint="@string/report_message"
                    android:textSize="14sp"
                    android:background="@drawable/bg_round_border"
                    tools:ignore="Autofill,TextFields" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/image_"
                    android:textColor="?attr/Titel_1"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_round_border"
                    android:backgroundTint="?Boder"
                    android:orientation="horizontal"
                    android:padding="15dp">

                    <thiva.tamilaudiopro.views.Roundedimageview.RoundedImageView
                        android:id="@+id/iv_sugg_song"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/songs"
                        app:riv_border_color="#DFDFDF"
                        app:riv_corner_radius="5dp"
                        android:scaleType="centerCrop"/>

                    <LinearLayout
                        android:id="@+id/ll_sugg"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:tint="?Titel_1"
                            android:layout_width="28dp"
                            android:layout_height="28dp"
                            android:src="@drawable/ic_playlist_add_white_24dp"
                            android:contentDescription="@string/image_content"/>

                        <TextView
                            android:textColor="?Titel_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:text="@string/select_image"
                            android:textSize="14sp" />

                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/button_sugg_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/submit"
                    android:background="?attr/BackgroundTint"
                    android:textColor="?attr/BackgroundColor"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"/>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</LinearLayout>