<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="?attr/BackgroundColor_S">

    <LinearLayout
        android:id="@+id/ll_set_ring"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:background="?attr/selectableItemBackground">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_call_black_24dp"
            android:tint="?BackgroundTint"
            android:padding="5dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_as_ring"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:textColor="?attr/BackgroundTint"
            android:padding="15dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="?Boder"/>

    <LinearLayout
        android:id="@+id/ll_set_noti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:background="?attr/selectableItemBackground">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_notifications"
            android:tint="?BackgroundTint"
            android:padding="5dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_as_noti"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:textColor="?attr/BackgroundTint"
            android:padding="15dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="?Boder"/>

    <LinearLayout
        android:id="@+id/ll_set_alarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:background="?attr/selectableItemBackground">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_alarm"
            android:tint="?BackgroundTint"
            android:padding="5dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_as_alarm"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:textColor="?attr/BackgroundTint"
            android:padding="15dp" />

    </LinearLayout>

</LinearLayout>